Add --enable-preview and --release support